tests/lean/vm_eval_crash.lean.expected.out
vm_eval_crash.lean:1:8: error: invalid vm_eval command, expression contains metavariables
